# Reversi

./: #Makefile  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  othello-Bridging-Header.h  src
OptimizationProfiles/: Reversi.profdata
Reversi/: AppDelegate.h  AppDelegate.m  FirstViewController.h  FirstViewController.m  FirstViewController.mm  Main.storyboard  ResultsViewController.h  ResultsViewController.mm  SceneDelegate.h  SceneDelegate.m  ViewController.h  ViewController.mm  Wrapper.h  Wrapper.mm  main.m  reversi.c  reversi.cpp  reversi.h  reversi.hpp  variables.h
Reversi.xcodeproj/: project.pbxproj
Reversi.xcodeproj/project.xcworkspace/xcuserdata/sasa.xcuserdatad/: UserInterfaceState.xcuserstate
Reversi.xcodeproj/xcshareddata/xcschemes/: Reversi.xcscheme
Reversi.xcodeproj/xcuserdata/sasa.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
Reversi.xcodeproj/xcuserdata/sasa.xcuserdatad/xcschemes/: xcschememanagement.plist
Reversi/Assets.xcassets/AppIcon.appiconset/: Contents.json
Reversi/Assets.xcassets/nullb.imageset/: Contents.json
Reversi/Assets.xcassets/stone1.dataset/: Contents.json
Reversi/Assets.xcassets/win.imageset/: Contents.json
Reversi/Base.lproj/: Main.storyboard
Reversi/book/: cow.h  tiger.h
assets/: book.txt  book_back.txt
book/: cow.h  cow.hpp  tiger.h  tiger.hpp
header/: Objective-C-Wrapper.h  othello-Bridging-Header.h  reversi.h
learning/: learn.py  output_model.py
learning/models/: model.h5  model.txt  model_back2.txt  model_end.txt  model_mid.txt  model_start.txt
models/: book.txt  book2.txt  eval0.zstd  eval1.zstd  eval10.zstd  eval11.zstd  eval12.zstd  eval13.zstd  eval14.zstd  eval15.zstd  eval2.zstd  eval3.zstd  eval4.zstd  eval5.zstd  eval6.zstd  eval7.zstd  eval8.zstd  eval9.zstd  model.h5  model.txt  model1.txt  model10.txt  model11.txt  model12.txt  model13.txt  model14.txt  model2.txt  model3.txt  model4.txt  model5.txt  model6.txt  model7.txt  model8.txt  model9.txt  mpc.txt
othello/: AppDelegate.swift  FirstViewController.swift  Objective-C-Wrapper.h  Objective-C-Wrapper.m  ResultViewController.swift  ViewController.swift  a.out  evaluation.c  evaluation.h  othello.c  othello.entitlements  othello.h  reversi.c  reversi.h
othello.xcodeproj/: project.pbxproj
othello.xcodeproj/project.xcworkspace/xcuserdata/haha.xcuserdatad/: UserInterfaceState.xcuserstate
othello.xcodeproj/project.xcworkspace/xcuserdata/sasa.xcuserdatad/: UserInterfaceState.xcuserstate
othello.xcodeproj/xcshareddata/xcschemes/: othello.xcscheme
othello.xcodeproj/xcuserdata/haha.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
othello.xcodeproj/xcuserdata/haha.xcuserdatad/xcschemes/: xcschememanagement.plist
othello/Assets.xcassets/blackb.imageset/: Contents.json
othello/Assets.xcassets/fukidashi.imageset/: Contents.json
othello/Assets.xcassets/hako.imageset/: Contents.json
othello/Assets.xcassets/stone2.dataset/: Contents.json
othello/Assets.xcassets/whiteb.imageset/: Contents.json
othello/Base.lproj/: Main.storyboard
reversiTests/: reversiTests.m
reversiUITests/: reversiUITests.m  reversiUITestsLaunchTests.m
src/: Main.cpp  bit.hpp  book.hpp  book2.hpp  evaluate.hpp  evaluate_bitboard.hpp  evaluate_sgd.hpp  hash.cpp  hash.hpp  index.hpp  reversi.cpp  reversi.h  reversi.hpp  variables.h  variables.hpp
tools/: divide.cpp  eval_optimizer.cpp  eval_optimizer_adam.cpp  eval_optimizer_momentum.cpp  learn.py  magic.cpp  make.py  make_data.py  output_model.py
